--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/schedule": "^4.0.0",
+    "@nestjs/schedule": "^5.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
@@ -34,6 +34,7 @@
     "dotenv": "^17.2.1",
     "nodemailer": "^6.9.13",
     "pg": "^8.11.3",
+    "puppeteer": "^24.19.0",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
     "rxjs": "^7.8.1",
